Fixed Product Card UI | Error: HorizontalScroll was interfairing with Product Card ui as no-wrap was enabled

--- a/components/Homepage/content.module.css
+++ b/components/Homepage/content.module.css
@@ -1,10 +1,9 @@
-.content{
+ .content{
     background-color: whitesmoke;
     width: 90%;
     border-radius: 22px;
     padding: 5px;
 }
-
 .multiple{
     justify-content: center;
     display: flex;
@@ -16,29 +15,29 @@
     text-align: left;
     background-color: antiquewhite;
     height: 150px;
-    max-width: 400px;
+    width: 100%;
     margin: 10px;
     border-radius: 12px;
     min-width: 120px;
 }
 @media screen and (max-width:628px){
-
+    
     .multiple div{
         height: 250px;
     }
     
 }
 @media screen and (max-width:416px){
-
+    
     .multiple div{
         height: 300px;
     }
     
 }
 .multiple div h1{
-        font-weight: 900;
-        font-size: 30px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 900;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .multiple button{
     background-color: rgba(0, 0, 0, 0.863);
@@ -48,7 +47,7 @@
     width: 100px;
     border-radius: 22px;
     margin-top: 12px;
-
+    
 }
 
 .Scroll{
@@ -60,14 +59,19 @@
 .horizontalProductscroll{
     margin-bottom: 100px;
     overflow: auto;
-  white-space: nowrap;
-  display: flex;
-  padding: 20px;
-
+    /* white-space: nowrap; */
+    display: flex;
+    padding: 20px;
+    
 }
+
 .Scroll h1{
     color: white;
     margin-top: 50px;
     width: 100%;
-    text-align: center;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+} 
+
