--- a/components/Homepage/home.module.css
+++ b/components/Homepage/home.module.css
@@ -23,6 +23,7 @@
 .nav li{
     margin: 8px;
     color: #316372ee;
+    margin-bottom: 30px;
 }
 
 /* Container */
