--- a/components/productcard/product.module.css
+++ b/components/productcard/product.module.css
@@ -1,7 +1,8 @@
 .containerProduct{
     word-wrap: break-word;
     border-radius: 15px;
-    max-width: 190px;
+    max-width: 210px;
+    min-width: 200px;
     background-color: rgb(252, 252, 252);
     margin: 5px;
     padding: 20px;
